GNOME Bugzilla – Bug 771515
Gateway setting when using static IPv4 is not stored and not applied
Last modified: 2016-09-20 08:34:24 UTC
Using gnome-control-center 3.21.92 + two patches to fix the crashes when editing gateway/routes, and network-manager 1.2.4, I cannot get NM to configure a gateway. How to reproduce: - set your IPv4 to manual (no DHCP) - configure address and netmask and gateway - apply changes - if you still have a gateway displayed in the summary screen (for example because your former DHCP connection had the same gateway defined), disable the network connection and enable it back with the toggle on the top right, the gateway field is now empty here (and it should not) - try to edit the connection again, the gateway field is effectively empty here too - put back a value and apply changes, it stays empty on the summary screen and on further tries to edit the connection In the journal, I see nothing interesting only this when I open the window to edit the connection: sept. 16 03:29:10 kali-rolling gnome-control-c[3654]: gtk_entry_set_text: assertion 'text != NULL' failed And this when I apply the changes: sept. 16 03:33:49 kali-rolling NetworkManager[598]: <info> [1474011229.2931] audit: op="connection-update" uuid="5f1ae5f9-543a-4d29-a740-1d85d8994610" name="Wired connection 1" pid=3654 uid=0 result="success" sept. 16 03:33:49 kali-rolling NetworkManager[598]: <info> [1474011229.2920] keyfile: update /etc/NetworkManager/system-connections/Wired connection 1 (5f1ae5f9-543a-4d29-a740-1d85d8994610,"Wired connection 1") When I check the connection file created by NM (in /etc/NetworkManager/system-connections/Wired connection 1) it lacks the gateway field. This is reproduced on a Kali Rolling system which is basically a Debian Testing/Stretch system. If you have any question, just ask.
BTW initial bug report here: https://bugs.kali.org/view.php?id=3578
Created attachment 335712 [details] [review] network: Fix warning when opening IPv4 connection editor
Created attachment 335715 [details] [review] network: Fix application of the default gateway Now that we ensured that only the first address has a gateway entry, read it and apply it. See https://bugzilla.gnome.org/show_bug.cgi?id=765969
Attachment 335712 [details] pushed as da7be92 - network: Fix warning when opening IPv4 connection editor Attachment 335715 [details] pushed as 7dfc6a6 - network: Fix application of the default gateway