network: Fix warning when opening IPv4 connection editor

https://bugzilla.gnome.org/show_bug.cgi?id=771515